cilium-demos/grpc-grpcroute/grpcroute.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-grpc
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: grpc
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/component: grpc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: grpc
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:6d3ae3354bafaabc94caa79cc387e8bdc326ffeb2af8c496293a3a89b62b12c1
          ports:
            - name: grpc
              containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-grpc
spec:
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: grpc
  ports:
    - name: grpc
      port: 9090
      targetPort: grpc
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pacman-grpc-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: grpc
      port: 9090
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: pacman-grpc
spec:
  parentRefs:
    - name: pacman-grpc-gateway
  rules:
    - matches:
        - method:
            service: pacman.ScoreService
      backendRefs:
        - name: pacman-grpc
          port: 9090
